--- a/templates/chatbot-front/index.html
+++ b/templates/chatbot-front/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../static/chatbot-front/css/common.css" />
     <link rel="stylesheet" href="../../static/chatbot-front/css/index.css" />
     <title>Index</title>
   </head>
