최종 콘텐츠 퍼블리싱

--- a/templates/chatbot-front/chatbot.html
+++ b/templates/chatbot-front/chatbot.html
@@ -67,7 +67,7 @@
                         <div class="category-dropdown">
                           <select
                             id="categorySelect"
-                            class="category-dropdown-select"
+                            class="category-dropdown-select second"
                           >
                             <option
                               value="업무를 선택해 주세요"
@@ -190,12 +190,153 @@
                         <span>* 카테고리를 선택 후 입력해 주세요.</span>
                       </div>
                       <button
-                        class="chat__select-done-button"
+                        class="chat__select-done-button third"
                         id="thirdStepButton"
                       >
                         완료
                       </button>
                     </div>
+                  </div>
+                  <!-- 최종 콘텐츠 -->
+                  <div class="chat__text">
+                    <div class="chat__select last-content">
+                      <span
+                        >요청하신 [업무]의 준비 서류는 아래와 같습니다.</span
+                      >
+                      <span
+                        >1. 출입국외국인청 신청 시 준비하셔야 할 양식서류</span
+                      >
+                      <p>
+                        •
+                        <svg
+                          width="16"
+                          height="16"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                        >
+                          <path
+                            d="M12 14L11.2929 14.7071L12 15.4142L12.7071 14.7071L12 14ZM13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L13 5ZM6.29289 9.70711L11.2929 14.7071L12.7071 13.2929L7.70711 8.29289L6.29289 9.70711ZM12.7071 14.7071L17.7071 9.70711L16.2929 8.29289L11.2929 13.2929L12.7071 14.7071ZM13 14L13 5L11 5L11 14L13 14Z"
+                            fill="#33363F"
+                          />
+                          <path
+                            d="M5 16L5 17C5 18.1046 5.89543 19 7 19L17 19C18.1046 19 19 18.1046 19 17V16"
+                            stroke="#33363F"
+                            stroke-width="2"
+                          />
+                        </svg>
+                        표기가 있는 버튼은 클릭 시 양식 다운로드 가능합니다.
+                      </p>
+                      <button type="button" class="last-step__button">
+                        <span>통합신청서</span>
+                        <svg
+                          class="download-icon"
+                          width="16"
+                          height="16"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                        >
+                          <path
+                            d="M12 14L11.2929 14.7071L12 15.4142L12.7071 14.7071L12 14ZM13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L13 5ZM6.29289 9.70711L11.2929 14.7071L12.7071 13.2929L7.70711 8.29289L6.29289 9.70711ZM12.7071 14.7071L17.7071 9.70711L16.2929 8.29289L11.2929 13.2929L12.7071 14.7071ZM13 14L13 5L11 5L11 14L13 14Z"
+                            fill="#33363F"
+                          />
+                          <path
+                            d="M5 16L5 17C5 18.1046 5.89543 19 7 19L17 19C18.1046 19 19 18.1046 19 17V16"
+                            stroke="#33363F"
+                            stroke-width="2"
+                          />
+                        </svg>
+                      </button>
+                      <button type="button" class="last-step__button">
+                        <span>위임장</span>
+                        <svg
+                          class="download-icon"
+                          width="16"
+                          height="16"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                        >
+                          <path
+                            d="M12 14L11.2929 14.7071L12 15.4142L12.7071 14.7071L12 14ZM13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L13 5ZM6.29289 9.70711L11.2929 14.7071L12.7071 13.2929L7.70711 8.29289L6.29289 9.70711ZM12.7071 14.7071L17.7071 9.70711L16.2929 8.29289L11.2929 13.2929L12.7071 14.7071ZM13 14L13 5L11 5L11 14L13 14Z"
+                            fill="#33363F"
+                          />
+                          <path
+                            d="M5 16L5 17C5 18.1046 5.89543 19 7 19L17 19C18.1046 19 19 18.1046 19 17V16"
+                            stroke="#33363F"
+                            stroke-width="2"
+                          />
+                        </svg>
+                      </button>
+                      <button type="button" class="last-step__button">
+                        <span>업무수행확인서</span>
+                        <svg
+                          class="download-icon"
+                          width="16"
+                          height="16"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                        >
+                          <path
+                            d="M12 14L11.2929 14.7071L12 15.4142L12.7071 14.7071L12 14ZM13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L13 5ZM6.29289 9.70711L11.2929 14.7071L12.7071 13.2929L7.70711 8.29289L6.29289 9.70711ZM12.7071 14.7071L17.7071 9.70711L16.2929 8.29289L11.2929 13.2929L12.7071 14.7071ZM13 14L13 5L11 5L11 14L13 14Z"
+                            fill="#33363F"
+                          />
+                          <path
+                            d="M5 16L5 17C5 18.1046 5.89543 19 7 19L17 19C18.1046 19 19 18.1046 19 17V16"
+                            stroke="#33363F"
+                            stroke-width="2"
+                          />
+                        </svg>
+                      </button>
+                      <button type="button" class="last-step__button">
+                        <span>기타</span>
+                      </button>
+                      <span
+                        >2. 출입국외국인청 신청 시 준비하셔야 할 첨부서류</span
+                      >
+                      <p>•여권</p>
+                      <p>•외국인등록증</p>
+                      <p>•특례고용가능확인서(고용노동부 발급)</p>
+                      <p>•표준근로계약서(고용노동부 발급)</p>
+                      <p>•사업자등록증</p>
+                    </div>
+                  </div>
+                  <!-- 이전/처음 버튼 -->
+                  <div class="chat__reset">
+                    <button class="chat__reset-button prev">
+                      <span>이전으로</span
+                      ><svg
+                        width="14"
+                        height="14"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M4 8L3.29289 8.70711L2.58579 8L3.29289 7.29289L4 8ZM9 20C8.44772 20 8 19.5523 8 19C8 18.4477 8.44772 18 9 18L9 20ZM8.29289 13.7071L3.29289 8.70711L4.70711 7.29289L9.70711 12.2929L8.29289 13.7071ZM3.29289 7.29289L8.29289 2.29289L9.70711 3.70711L4.70711 8.70711L3.29289 7.29289ZM4 7L14.5 7L14.5 9L4 9L4 7ZM14.5 20L9 20L9 18L14.5 18L14.5 20ZM21 13.5C21 17.0898 18.0898 20 14.5 20L14.5 18C16.9853 18 19 15.9853 19 13.5L21 13.5ZM14.5 7C18.0899 7 21 9.91015 21 13.5L19 13.5C19 11.0147 16.9853 9 14.5 9L14.5 7Z"
+                          fill="#33363F"
+                        />
+                      </svg>
+                    </button>
+                    <button class="chat__reset-button home">
+                      <span>처음으로</span
+                      ><svg
+                        width="16"
+                        height="16"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          fill-rule="evenodd"
+                          clip-rule="evenodd"
+                          d="M5.27446 10.1262C5 10.7229 5 11.4018 5 12.7595V16.9999C5 18.8856 5 19.8284 5.58579 20.4142C6.11733 20.9457 6.94285 20.9949 8.5 20.9995V16C8.5 14.8954 9.39543 14 10.5 14H13.5C14.6046 14 15.5 14.8954 15.5 16V20.9995C17.0572 20.9949 17.8827 20.9457 18.4142 20.4142C19 19.8284 19 18.8856 19 16.9999V12.7595C19 11.4018 19 10.7229 18.7255 10.1262C18.4511 9.52943 17.9356 9.08763 16.9047 8.20401L15.9047 7.34687C14.0414 5.74974 13.1098 4.95117 12 4.95117C10.8902 4.95117 9.95857 5.74974 8.09525 7.34687L7.09525 8.20401C6.06437 9.08763 5.54892 9.52943 5.27446 10.1262ZM13.5 20.9999V16H10.5V20.9999H13.5Z"
+                          fill="#222222"
+                        />
+                      </svg>
+                    </button>
                   </div>
                 </div>
               </div>
