--- a/static/chatbot-front/css/chatbot.css
+++ b/static/chatbot-front/css/chatbot.css
@@ -167,10 +167,18 @@
 
 .chat__reset-button span {
   font-size: 12px;
+  color: #333;
 }
 
 .chat__text span {
   font-size: 14px;
+}
+
+.chat__text p {
+  display: flex;
+  width: 100%;
+  height: 16px;
+  font-size: 11px;
 }
 
 .chat__select {
@@ -188,10 +196,11 @@
   align-items: center;
   width: 70%;
   height: 30px;
-  border: 1px solid #000;
+  border: 1px solid #333;
   border-radius: 8px;
   background-color: #fff;
-  font-size: 14px;
+  font-size: 13px;
+  color: #333;
   cursor: pointer;
 }
 
@@ -225,7 +234,7 @@
   align-items: center;
   text-align: center;
   padding-right: 10px;
-  font-size: 13px;
+  font-size: 12px;
   font-weight: 600;
   color: #aaaaaa;
   border: none;
@@ -252,6 +261,27 @@
   font-size: 10px;
 }
 
+.chat__select.last-content {
+  gap: 5px;
+}
+
+.last-step__button {
+  position: relative;
+}
+
+.last-step__button span {
+  font-size: 12px;
+}
+
+.download-icon {
+  position: absolute;
+  display: flex;
+  width: 20px;
+  height: 20px;
+  right: 5px;
+  cursor: pointer;
+}
+
 .bottom {
   display: flex;
   width: 400px;
@@ -270,6 +300,7 @@
   height: 100%;
   padding: 10px 10px;
   justify-content: space-between;
+  gap: 10px;
 }
 
 .input__container {
