--- a/static/chatbot-front/css/chatbot.css
+++ b/static/chatbot-front/css/chatbot.css
@@ -171,6 +171,7 @@
 }
 
 .chat__text span {
+  width: 100%;
   font-size: 14px;
 }
 
@@ -280,6 +281,59 @@
   height: 20px;
   right: 5px;
   cursor: pointer;
+}
+
+.button-container {
+  display: flex;
+  width: 100%;
+  height: 30px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.button-container__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90px;
+  height: 30px;
+  border: 1px solid #333;
+  border-radius: 8px;
+  background-color: #fff;
+  font-size: 13px;
+  color: #333;
+  cursor: pointer;
+}
+
+.chat__input-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.chat__input-container span {
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.chat__input {
+  display: flex;
+  width: 100%;
+  height: 25px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.chat__input span {
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.chat__input input {
+  display: flex;
+  width: 140px;
+  height: 20px;
 }
 
 .bottom {
