결제 퍼블리싱

--- a/static/chatbot-front/css/chatbot.css
+++ b/static/chatbot-front/css/chatbot.css
@@ -336,6 +336,16 @@
   height: 20px;
 }
 
+.bold-text {
+  font-weight: 600;
+}
+
+.colDiv {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
+
 .bottom {
   display: flex;
   width: 400px;
