--- a/templates/chatbot-front/chatbot.html
+++ b/templates/chatbot-front/chatbot.html
@@ -488,6 +488,7 @@
                       </svg>
                     </button>
                   </div>
+                  <!-- 개인정보 입력 -->
                   <div class="chat__text">
                     <div class="chat__select">
                       <span
@@ -548,6 +549,30 @@
                   <div class="button-container">
                     <button class="button-container__button">취소</button>
                     <button class="button-container__button">완료</button>
+                  </div>
+                  <!-- 결제 -->
+                  <div class="chat__text">
+                    <div class="chat__select">
+                      <span
+                        >신청하신 업무와 행정사 정보를 확인하신 후 계좌번호로
+                        비용을 입금해 주시기 바랍니다.</span
+                      >
+                      <span
+                        >입금 진행 후 아래 [입금 완료] 버튼을 클릭해 주시면
+                        신청이 완료됩니다.</span
+                      >
+                      <div class="colDiv">
+                        <span class="bold-text">* 업무 내용 : 근무처 추가</span>
+                        <span class="bold-text">* 업무 대행 비용 : 5000원</span>
+                      </div>
+                      <div class="colDiv">
+                        <span>1. 대행 기관 행정사 정보</span>
+                        <span>• 기관명 : </span>
+                        <span>• 예금주 명 : </span>
+                        <span>• 계좌번호 : </span>
+                      </div>
+                      <button>입금완료</button>
+                    </div>
                   </div>
                 </div>
               </div>
