스크롤바 퍼블리싱

--- a/templates/chatbot-front/index.html
+++ b/templates/chatbot-front/index.html
@@ -5,29 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../static/chatbot-front/css/common.css" />
     <link rel="stylesheet" href="../../static/chatbot-front/css/index.css" />
-    <title>Index</title>
+    <title>Home</title>
   </head>
   <body>
-    <div class="index">
+    <div class="home">
       <div class="content">
         <img
           src="../../static/chatbot-front/images/logo.jpg"
           alt="logo"
-          class="logo"
+          class="content__logo"
         />
-        <div class="description__container">
-          <span class="description__text">안녕하세요. 비자24입니다.</span>
-          <span class="description__text"
-            >출입국 비자 업무에 필요한<br />서류정보, 비자24에서
-            확인하세요.</span
-          >
-          <span class="description__text">법무부출입국업무 대행기관</span>
-          <span class="description__text"
-            >수원국제행정사사무소에서<br />서류작성 및 업무대행도 한 번에<br />신청
-            가능합니다.</span
-          >
+        <span class="content__title">사용하실 언어를 선택해 주세요.</span>
+        <div class="content__select">
+          <a href="./start.html" class="content__select-button">한국어</a>
+          <a href="./start.html" class="content__select-button">English</a>
+          <a href="./start.html" class="content__select-button">中國語</a>
         </div>
-        <a href="./chatbot.html" class="start-button">시작하기</a>
       </div>
     </div>
   </body>
