--- a/static/chatbot-front/css/chatbot.css
+++ b/static/chatbot-front/css/chatbot.css
@@ -34,7 +34,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  padding: 10px 10px;
+  padding: 10px 20px;
 }
 
 .logo {
@@ -79,16 +79,26 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  padding: 20px 20px;
   overflow-y: scroll;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
   z-index: 1000;
 }
 
 .chat__container::-webkit-scrollbar {
-  width: 0px;
-  background: transparent; /* Chrome, Safari, Opera */
+  width: 8px; /* 스크롤바 너비 */
+  background-color: #d4d4d4; /* 스크롤바 배경 색상 */
+}
+
+/* 스크롤바 트랙 (배경) */
+.chat__container::-webkit-scrollbar-track {
+  background-color: #d4d4d4; /* 스크롤바 트랙 배경 색상 */
+}
+
+.chat__container::-webkit-scrollbar-thumb {
+  background-color: #aaa; /* 스크롤바 핸들 색상 */
+}
+
+.chat__container::-webkit-scrollbar-thumb:hover {
+  background-color: #888; /* 호버 시 스크롤바 핸들 색상 */
 }
 
 .chat__wrapper {
@@ -97,6 +107,7 @@
   height: fit-content;
   flex-direction: column;
   gap: 10px;
+  padding: 20px 20px;
 }
 
 .chat__user {
