--- a/static/chatbot-front/css/index.css
+++ b/static/chatbot-front/css/index.css
@@ -1,4 +1,4 @@
-.index {
+.home {
   position: fixed;
   top: 0;
   left: 0;
@@ -6,7 +6,8 @@
   width: 400px;
   height: 635px;
   background-color: #fff;
-  border: 1px solid #000;
+  z-index: 100;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
 }
 
 .content {
@@ -15,51 +16,45 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: auto;
+  height: 100%;
   padding: 50px 20px;
 }
 
-.logo {
+.content__logo {
   display: flex;
   width: 230px;
   margin: 0 auto;
   padding-left: 30px;
 }
 
-.description__container {
+.content__title {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 300px;
-  border: 1px solid #000;
-  border-radius: 12px;
   margin: 30px auto;
-  padding: 20px 0;
-}
-
-.description__text {
-  display: flex;
-  text-align: center;
   font-size: 22px;
   font-weight: 700;
   color: #000;
-  margin: 15px auto;
 }
 
-.start-button {
+.content__select {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+}
+
+.content__select-button {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 250px;
   height: 60px;
+  margin: 30px auto;
+  padding: 10px;
   border: 1px solid #000;
   border-radius: 8px;
   background-color: #fff;
-  font-size: 24px;
+  font-size: 26px;
   font-weight: 700;
   color: #000;
   cursor: pointer;
-  text-decoration: none;
 }
