--- a/static/chatbot-front/css/start.css
+++ b/static/chatbot-front/css/start.css
@@ -1,4 +1,4 @@
-.home {
+.index {
   position: fixed;
   top: 0;
   left: 0;
@@ -6,54 +6,67 @@
   width: 400px;
   height: 635px;
   background-color: #fff;
-  border: 1px solid #000;
+  z-index: 100;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
 }
 
 .content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: auto;
   padding: 50px 20px;
 }
 
-.content__logo {
+.logo {
   display: flex;
   width: 230px;
   margin: 0 auto;
   padding-left: 30px;
 }
 
-.content__title {
-  display: flex;
-  margin: 30px auto;
-  font-size: 22px;
-  font-weight: 700;
-  color: #000;
-}
-
-.content__select {
+.description__container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  height: auto;
+  height: 360px;
+  border: 1px solid #000;
+  border-radius: 12px;
+  margin: 30px auto;
+  padding: 20px;
 }
 
-.content__select-button {
+.description__text {
+  display: flex;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  color: #000;
+  margin: 15px auto;
+}
+
+.description__image {
+  width: 20px;
+  height: 20px;
+  margin-left: 5px;
+}
+
+.start-button {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 250px;
+  width: 100%;
   height: 60px;
-  margin: 30px auto;
-  padding: 10px;
   border: 1px solid #000;
   border-radius: 8px;
   background-color: #fff;
-  font-size: 26px;
+  font-size: 24px;
   font-weight: 700;
   color: #000;
   cursor: pointer;
+  text-decoration: none;
 }
