--- a/templates/chatbot-front/chatbot.html
+++ b/templates/chatbot-front/chatbot.html
@@ -32,7 +32,7 @@
                   alt="avatar"
                 />
                 <div class="chat__text-container">
-                  <!-- 안내 멘트 -->
+                  <!-- 최초 접속 메시지 -->
                   <div class="chat__text">
                     <span
                       >VISA24입니다. 무엇을 도와드릴까요? 아래 비자 업무를
@@ -615,12 +615,23 @@
                       </svg>
                     </button>
                   </div>
+                  <!-- 지원하지 않는 업무 -->
+                  <div class="chat__text">
+                    <span
+                      >현재 출입국외국인청 업무 매뉴얼에서 지원하지 않는 업무로
+                      확인이 됩니다.
+                    </span>
+                  </div>
                 </div>
               </div>
               <!-- 사용자 채팅 -->
               <div class="chat__user">
                 <div class="chat__user-text-container">
-                  <div class="chat__user-text">VISA(해외)</div>
+                  <div class="chat__user-text">
+                    사용자 채팅입니다.<br />이 채팅을 기준으로 위의 채팅은
+                    참고용으로 화면에 표시해 두었고, 아래 채팅부터는 실제
+                    시나리오입니다.
+                  </div>
                 </div>
               </div>
             </div>
