카테고리에 선택된 값이 없을 경우 1초간 빨간색으로 경고

--- a/static/chatbot-front/css/chatbot.css
+++ b/static/chatbot-front/css/chatbot.css
@@ -248,7 +248,7 @@
   padding-right: 10px;
   font-size: 12px;
   font-weight: 600;
-  color: #aaaaaa;
+  color: #333;
   border: none;
   outline: none;
   cursor: pointer;
