--- a/templates/chatbot-front/chatbot.html
+++ b/templates/chatbot-front/chatbot.html
@@ -66,7 +66,7 @@
                         <!-- 카테고리 드롭다운 -->
                         <div class="category-dropdown">
                           <select
-                            id="categorySelect"
+                            id="categorySelectSecond"
                             class="category-dropdown-select second"
                           >
                             <option
@@ -99,7 +99,9 @@
                             />
                           </svg>
                         </div>
-                        <span>* 카테고리를 선택 후 입력해 주세요.</span>
+                        <span class="warning-text"
+                          >* 카테고리를 선택 후 입력해 주세요.</span
+                        >
                       </div>
                       <button
                         class="chat__select-done-button"
@@ -154,8 +156,8 @@
                         <!-- 카테고리 드롭다운 -->
                         <div class="category-dropdown">
                           <select
-                            id="categorySelect"
-                            class="category-dropdown-select"
+                            id="categorySelectThird"
+                            class="category-dropdown-select third"
                           >
                             <option
                               value="업무를 선택해 주세요"
@@ -187,7 +189,9 @@
                             />
                           </svg>
                         </div>
-                        <span>* 카테고리를 선택 후 입력해 주세요.</span>
+                        <span class="warning-text"
+                          >* 카테고리를 선택 후 입력해 주세요.</span
+                        >
                       </div>
                       <button
                         class="chat__select-done-button third"
@@ -618,8 +622,8 @@
                   <!-- 지원하지 않는 업무 -->
                   <div class="chat__text">
                     <span
-                      >현재 출입국외국인청 업무 매뉴얼에서 지원하지 않는 업무로
-                      확인이 됩니다.
+                      >비자24에서 지원하지 않는 업무입니다.<br />다시
+                      문의해주세요.
                     </span>
                   </div>
                 </div>
