--- a/static/chatbot-front/css/chatbot.css
+++ b/static/chatbot-front/css/chatbot.css
@@ -240,12 +240,13 @@
 
 .category-dropdown-select {
   display: flex;
-  width: 100%;
+  width: 150px;
   height: 100%;
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding-right: 10px;
+  padding-left: 25px;
+  text-overflow: ellipsis;
   font-size: 12px;
   font-weight: 600;
   color: #333;
