--- a/static/chatbot-front/css/chatbot.css
+++ b/static/chatbot-front/css/chatbot.css
@@ -179,6 +179,11 @@
 .chat__reset-button span {
   font-size: 12px;
   color: #333;
+  pointer-events: none;
+}
+
+.chat__reset-button svg {
+  pointer-events: none;
 }
 
 .chat__text span {
@@ -394,6 +399,10 @@
   padding-left: 20px;
   padding-right: 45px;
   background-color: #f5fef9;
+
+  &:focus {
+    outline: 1px solid #13b256;
+  }
 }
 
 .input__container button {
