--- a/static/chatbot-front/css/chatbot.css
+++ b/static/chatbot-front/css/chatbot.css
@@ -194,7 +194,7 @@
 .chat__text p {
   display: flex;
   width: 100%;
-  height: 16px;
+  height: 18px;
   font-size: 11px;
 }
 
@@ -363,6 +363,17 @@
   flex-direction: column;
 }
 
+.agentDiv {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.agentDiv p {
+  padding-left: 10px;
+}
+
 .bottom {
   display: flex;
   width: 400px;
@@ -412,6 +423,12 @@
   right: 5px;
   width: 30px;
   height: 30px;
+}
+
+.placeholder-red::placeholder {
+  font-size: 10px;
+  color: #ff0000;
+  font-weight: 600;
 }
 
 .voice-button {
