--- a/static/chatbot-front/css/chatbot.css
+++ b/static/chatbot-front/css/chatbot.css
@@ -431,6 +431,27 @@
   font-weight: 600;
 }
 
+.edit-button__container {
+  display: flex;
+  width: 100%;
+  height: 30px;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.edit-button__container button {
+  width: 80px;
+  height: 25px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  gap: 5px;
+  font-size: 12px;
+  font-weight: 600;
+  background-color: #000;
+  color: #fff;
+}
+
 .voice-button {
   position: relative;
   display: flex;
