--- a/templates/chatbot-front/chatbot.html
+++ b/templates/chatbot-front/chatbot.html
@@ -584,6 +584,94 @@
                     </button>
                     <button class="button-container__button done">완료</button>
                   </div>
+                  <!-- 개인정보 입력완료 -->
+                  <div class="chat__text">
+                    <div class="chat__select">
+                      <span
+                        >입력하신 개인 정보로 서류작성을 진행합니다.<br />입력하신
+                        개인정보를 확인해주세요.<br />우측 아이콘을 클릭해
+                        내용을 수정할 수 있습니다.</span
+                      >
+                      <div class="edit-button__container">
+                        <button>
+                          수정하기<svg
+                            width="14"
+                            height="14"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M17.2047 10.7957L19.0007 8.9997C19.546 8.45445 19.8186 8.18182 19.9644 7.88773C20.2416 7.32818 20.2416 6.67122 19.9644 6.11167C19.8186 5.81757 19.546 5.54495 19.0007 4.9997C18.4555 4.45445 18.1829 4.18182 17.8888 4.03609C17.3292 3.7588 16.6723 3.7588 16.1127 4.03609C15.8186 4.18182 15.546 4.45445 15.0007 4.9997L13.1821 6.81835C14.146 8.46895 15.5321 9.84451 17.2047 10.7957ZM11.7276 8.27281L4.85713 15.1433C4.43207 15.5684 4.21954 15.7809 4.0798 16.042C3.94007 16.3031 3.88112 16.5978 3.76323 17.1873L3.14784 20.2643C3.08131 20.5969 3.04805 20.7632 3.14266 20.8578C3.23727 20.9524 3.40357 20.9191 3.73618 20.8526L6.81316 20.2372C7.40262 20.1193 7.69734 20.0604 7.95844 19.9206C8.21954 19.7809 8.43207 19.5684 8.85713 19.1433L15.7465 12.2539C14.1249 11.2383 12.7532 9.87597 11.7276 8.27281Z"
+                              fill="#fff"
+                            />
+                          </svg>
+                        </button>
+                      </div>
+                      <!-- 필수 입력 -->
+                      <div class="chat__input-container">
+                        <span>*필수 입력</span>
+                        <div class="chat__input">
+                          <span>*여권상 성과 이름</span>
+                          <span class="filled-text">김엔디</span>
+                        </div>
+                        <div class="chat__input">
+                          <span>*전화번호</span>
+                          <span class="filled-text">010-1234-5678</span>
+                        </div>
+                      </div>
+                      <!-- 선택 입력 -->
+                      <div class="chat__input-container">
+                        <span>선택 입력</span>
+                        <div class="chat__input">
+                          <span>국적</span>
+                          <span class="filled-text">한국</span>
+                        </div>
+                        <div class="chat__input">
+                          <span>여권번호</span>
+                          <span class="filled-text">XXXXXXXXXXXXXX</span>
+                        </div>
+                        <div class="chat__input">
+                          <span>여권발급일자</span>
+                          <span class="filled-text">yy.mm.dd-yy.mm.dd</span>
+                        </div>
+                        <div class="chat__input">
+                          <span>여권유효기간</span>
+                          <span class="filled-text">yy.mm.dd-yy.mm.dd</span>
+                        </div>
+                        <div class="chat__input">
+                          <span>외국인등록번호</span>
+                          <span class="filled-text">XXXXXXXXXXXXXX</span>
+                        </div>
+                        <div class="chat__input">
+                          <span>주소</span>
+                          <span class="filled-text">XXX XXX XXXX XXXXX-X</span>
+                        </div>
+                        <div class="chat__input">
+                          <span>체류기간만료일자</span>
+                          <span class="filled-text">yy.mm.dd-yy.mm.dd</span>
+                        </div>
+                        <div class="chat__input">
+                          <span>VISA_TYPE</span>
+                          <span class="filled-text">XXXX</span>
+                        </div>
+                      </div>
+                      <span
+                        >입력하신 정보로 서류작성 신청을 진행하시겠습니까?</span
+                      >
+                    </div>
+                  </div>
+                  <!-- 취소/신청 진행 버튼 -->
+                  <div class="button-container">
+                    <button class="button-container__button cancel">
+                      취소
+                    </button>
+                    <button class="button-container__button continue">
+                      신청 진행
+                    </button>
+                  </div>
                   <!-- 결제 -->
                   <div class="chat__text">
                     <div class="chat__select">
