--- a/templates/chatbot-admin/menu04.html
+++ b/templates/chatbot-admin/menu04.html
@@ -234,17 +234,17 @@
                 <td
                   class="usage-history__table-item usage-history__table-item--no"
                 >
-                  2
+                  1
                 </td>
                 <td
                   class="usage-history__table-item usage-history__table-item--company"
                 >
-                  B 대행
+                  A 대행
                 </td>
                 <td
                   class="usage-history__table-item usage-history__table-item--representative"
                 >
-                  B 엔디
+                  A 엔디
                 </td>
                 <td
                   class="usage-history__table-item usage-history__table-item--phone"
@@ -254,7 +254,7 @@
                 <td
                   class="usage-history__table-item usage-history__table-item--email"
                 >
-                  BBBB@bb.io
+                  AAAA@aa.io
                 </td>
                 <td
                   class="usage-history__table-item usage-history__table-item--account"
@@ -264,46 +264,7 @@
                 <td
                   class="usage-history__table-item usage-history__table-item--holder"
                 >
-                  B 엔디
-                </td>
-              </tr>
-            </tbody>
-            <tbody class="usage-history__table-data">
-              <tr class="usage-history__table-container">
-                <td
-                  class="usage-history__table-item usage-history__table-item--no"
-                >
-                  3
-                </td>
-                <td
-                  class="usage-history__table-item usage-history__table-item--company"
-                >
-                  C 대행
-                </td>
-                <td
-                  class="usage-history__table-item usage-history__table-item--representative"
-                >
-                  C 엔디
-                </td>
-                <td
-                  class="usage-history__table-item usage-history__table-item--phone"
-                >
-                  010-1234-5678
-                </td>
-                <td
-                  class="usage-history__table-item usage-history__table-item--email"
-                >
-                  CCCC@cc.io
-                </td>
-                <td
-                  class="usage-history__table-item usage-history__table-item--account"
-                >
-                  000-0000-0000-00
-                </td>
-                <td
-                  class="usage-history__table-item usage-history__table-item--holder"
-                >
-                  C 엔디
+                  A 엔디
                 </td>
               </tr>
             </tbody>
