--- a/static/chatbot-admin/css/common.css
+++ b/static/chatbot-admin/css/common.css
@@ -412,7 +412,7 @@ img {
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding-right: 10px;
+  padding-right: 25px;
   font-size: 13px;
   font-weight: 600;
   color: #1b3133;
@@ -505,4 +505,77 @@ img {
   font-weight: 600;
   text-align: center;
   padding: 0 16px;
+}
+
+.modal {
+  display: none;
+  flex-direction: column;
+  background-color: #fff;
+  margin: auto;
+  border: 1px solid #d4d4d4;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  width: 300px;
+  height: 200px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  padding: 30px;
+  width: 100%;
+  height: 150px;
+}
+
+.buttonDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
+  border-radius: 0 0 8px 8px;
+  overflow: hidden;
+}
+
+#modalConfirmButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  width: 100%;
+  height: 50px;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
+  border-radius: 0 0 8px 8px;
+}
+
+#modalConfirmButton:hover {
+  background-color: #0056b3;
+}
+
+#modalCancelButton,
+#modalSaveButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  width: 50%;
+  height: 50px;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
 }
