--- a/static/chatbot-admin/css/menu02.css
+++ b/static/chatbot-admin/css/menu02.css
@@ -1,4 +1,5 @@
 .content-modify {
+  position: relative;
   display: flex;
   width: 100%;
   height: calc(100% - 70px);
@@ -85,6 +86,7 @@
   letter-spacing: 0.05em;
   user-select: none;
   transition: all 0.2s ease-in;
+  cursor: pointer;
 
   &:hover {
     background-color: #d4d4d4;
@@ -174,7 +176,7 @@
 .content-modify__attach-doc-checkbox-wrapper {
   display: flex;
   width: 100%;
-  height: 400px;
+  min-height: 400px;
   margin-top: 10px;
   border: 1px solid #d4d4d4;
   border-radius: 8px;
@@ -275,32 +277,64 @@
   }
 }
 
+.usage-history__table {
+  min-height: 400px;
+  max-height: 550px;
+}
+
 .usage-history__table-item--checkbox {
   width: 5%;
   font-size: 12px;
-  white-space: nowrap;
 }
 
 .usage-history__table-item--list {
   width: 30%;
   font-size: 12px;
-  white-space: nowrap;
 }
 
 .usage-history__table-item--docs {
-  width: 35%;
+  width: 40%;
   font-size: 12px;
-  white-space: nowrap;
+}
+
+.usage-history__table-item--list,
+.usage-history__table-item--docs {
+  gap: 5px;
 }
 
 .usage-history__table-item--status {
-  width: 20%;
+  width: 15%;
   font-size: 12px;
-  white-space: nowrap;
 }
 
 .usage-history__table-item--delete {
   width: 10%;
   font-size: 12px;
-  white-space: nowrap;
+}
+
+.usage-history__table-item button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  font-size: 12px;
+  font-weight: 600;
+  user-select: none;
+  transition: all 0.2s ease-in;
+
+  &:hover {
+    background-color: #1b3133;
+    color: #fff;
+  }
+}
+
+.usage-history__table-item--list.attach {
+  width: 75%;
+}
+
+.usage-history__table-item--delete.attach {
+  width: 20%;
 }
