--- a/static/chatbot-admin/css/menu06.css
+++ b/static/chatbot-admin/css/menu06.css
@@ -35,3 +35,21 @@
 .usage-history__table-item--date {
   width: 20%;
 }
+
+.search-bar__category-dropdown-select {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-right: 25px;
+  font-size: 13px;
+  font-weight: 600;
+  color: #1b3133;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  appearance: none;
+  user-select: none;
+}
