--- a/templates/chatbot-admin/menu02.html
+++ b/templates/chatbot-admin/menu02.html
@@ -294,11 +294,129 @@
             </div>
             <!-- 서류 리스트 -->
             <div class="content-modify__doc-list-container">
+              <!-- 양식 서류 -->
               <div class="content-modify__form-doc-container">
                 <span class="content-modify__form-doc-title">양식서류</span>
-
-                <!-- 사용 기록 테이블 (들어가야 됨) -->
-
+                <!-- 양식서류 테이블 -->
+                <table class="usage-history__table form">
+                  <thead class="usage-history__table-header">
+                    <tr class="usage-history__table-container">
+                      <th
+                        class="usage-history__table-item usage-history__table-item--checkbox"
+                      >
+                        ☐
+                      </th>
+                      <th
+                        class="usage-history__table-item usage-history__table-item--list"
+                      >
+                        목록
+                      </th>
+                      <th
+                        class="usage-history__table-item usage-history__table-item--docs"
+                      >
+                        양식 파일
+                      </th>
+                      <th
+                        class="usage-history__table-item usage-history__table-item--status"
+                      >
+                        상태
+                      </th>
+                      <th
+                        class="usage-history__table-item usage-history__table-item--delete"
+                      >
+                        삭제
+                      </th>
+                    </tr>
+                  </thead>
+                  <tbody class="usage-history__table-data">
+                    <tr class="usage-history__table-container">
+                      <td
+                        class="usage-history__table-item usage-history__table-item--checkbox"
+                      >
+                        <input type="checkbox" />
+                      </td>
+                      <td
+                        class="usage-history__table-item usage-history__table-item--list"
+                      >
+                        사증발급 신청서<button>발급</button>
+                      </td>
+                      <td
+                        class="usage-history__table-item usage-history__table-item--docs"
+                      >
+                        사증발급 신청서.docs<button>발급</button>
+                      </td>
+                      <td
+                        class="usage-history__table-item usage-history__table-item--status"
+                      >
+                        다운 허용
+                      </td>
+                      <td
+                        class="usage-history__table-item usage-history__table-item--delete"
+                      >
+                        <button>삭제</button>
+                      </td>
+                    </tr>
+                  </tbody>
+                  <tbody class="usage-history__table-data">
+                    <tr class="usage-history__table-container">
+                      <td
+                        class="usage-history__table-item usage-history__table-item--checkbox"
+                      >
+                        <input type="checkbox" />
+                      </td>
+                      <td
+                        class="usage-history__table-item usage-history__table-item--list"
+                      >
+                        사증발급 신청서<button>발급</button>
+                      </td>
+                      <td
+                        class="usage-history__table-item usage-history__table-item--docs"
+                      >
+                        사증발급 신청서.docs<button>발급</button>
+                      </td>
+                      <td
+                        class="usage-history__table-item usage-history__table-item--status"
+                      >
+                        다운 허용
+                      </td>
+                      <td
+                        class="usage-history__table-item usage-history__table-item--delete"
+                      >
+                        <button>삭제</button>
+                      </td>
+                    </tr>
+                  </tbody>
+                  <tbody class="usage-history__table-data">
+                    <tr class="usage-history__table-container">
+                      <td
+                        class="usage-history__table-item usage-history__table-item--checkbox"
+                      >
+                        <input type="checkbox" />
+                      </td>
+                      <td
+                        class="usage-history__table-item usage-history__table-item--list"
+                      >
+                        사증발급 신청서<button>발급</button>
+                      </td>
+                      <td
+                        class="usage-history__table-item usage-history__table-item--docs"
+                      >
+                        사증발급 신청서.docs<button>발급</button>
+                      </td>
+                      <td
+                        class="usage-history__table-item usage-history__table-item--status"
+                      >
+                        다운 허용
+                      </td>
+                      <td
+                        class="usage-history__table-item usage-history__table-item--delete"
+                      >
+                        <button>삭제</button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+                <!-- 목록 추가 -->
                 <div class="content-modify__add-list-container">
                   <span class="content-modify__add-list-title">목록 추가</span>
                   <input
@@ -309,9 +427,50 @@
                   <button class="content-modify__add-list-button">추가</button>
                 </div>
               </div>
+              <!-- 첨부서류 -->
               <div class="content-modify__attach-doc-container">
                 <span class="content-modify__attach-doc-title">첨부서류</span>
-                <div class="content-modify__attach-doc-checkbox-wrapper"></div>
+                <!-- 첨부서류 테이블 -->
+                <table class="usage-history__table attach">
+                  <thead class="usage-history__table-header">
+                    <tr class="usage-history__table-container">
+                      <th
+                        class="usage-history__table-item usage-history__table-item--checkbox"
+                      >
+                        ☐
+                      </th>
+                      <th
+                        class="usage-history__table-item usage-history__table-item--list attach"
+                      >
+                        목록
+                      </th>
+                      <th
+                        class="usage-history__table-item usage-history__table-item--delete attach"
+                      >
+                        삭제
+                      </th>
+                    </tr>
+                  </thead>
+                  <tbody class="usage-history__table-data">
+                    <tr class="usage-history__table-container">
+                      <td
+                        class="usage-history__table-item usage-history__table-item--checkbox"
+                      >
+                        <input type="checkbox" />
+                      </td>
+                      <td
+                        class="usage-history__table-item usage-history__table-item--list attach"
+                      >
+                        사증발급 신청서
+                      </td>
+                      <td
+                        class="usage-history__table-item usage-history__table-item--delete attach"
+                      >
+                        <button>삭제</button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
                 <div class="content-modify__add-list-container">
                   <span class="content-modify__add-list-title">목록 추가</span>
                   <input
@@ -327,6 +486,11 @@
               <button class="content-modify__save-button">저장</button>
             </div>
           </div>
+          <!-- 모달 창 -->
+          <div class="modal">
+            <div class="modal-text">모든 카테고리를 선택해 주세요.</div>
+            <button id="modalConfirmButton">확인</button>
+          </div>
         </section>
       </div>
     </div>
@@ -334,5 +498,6 @@
     <!-- 자바스크립트 -->
     <script src="../../static/chatbot-admin/js/navbar.js"></script>
     <script src="../../static/chatbot-admin/js/pagination.js"></script>
+    <script src="../../static/chatbot-admin/js/menu02.js"></script>
   </body>
 </html>
