입점사 관리 모달 퍼블리싱

--- a/static/chatbot-admin/css/common.css
+++ b/static/chatbot-admin/css/common.css
@@ -507,6 +507,10 @@ img {
   padding: 0 16px;
 }
 
+.usage-history__table-item img {
+  cursor: pointer;
+}
+
 .modal-background {
   display: none;
   position: fixed;
