--- a/templates/chatbot-admin/menu01.html
+++ b/templates/chatbot-admin/menu01.html
@@ -312,6 +312,11 @@
               </svg>
             </button>
           </div>
+          <!-- 모달 창 -->
+          <div class="modal">
+            <div class="modal-text">모든 카테고리를 선택해 주세요.</div>
+            <button id="modalConfirmButton">확인</button>
+          </div>
         </section>
       </div>
     </div>
