--- a/static/chatbot-admin/css/common.css
+++ b/static/chatbot-admin/css/common.css
@@ -525,7 +525,7 @@ img {
 }
 
 .modal {
-  display: none;
+  display: flex;
   flex-direction: column;
   background-color: #fff;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
