--- a/static/chatbot-admin/css/menu02.css
+++ b/static/chatbot-admin/css/menu02.css
@@ -338,3 +338,29 @@
 .usage-history__table-item--delete.attach {
   width: 20%;
 }
+
+.select-message {
+  position: absolute;
+  display: flex;
+  left: 0;
+  bottom: 0;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 30px;
+  font-size: 12px;
+  font-weight: 600;
+  background-color: #1b3133;
+  color: #fff;
+}
+
+.category-find {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 200px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  border-bottom: 1px solid #d4d4d4;
+}
