admin 퍼블리싱 완료

--- a/static/chatbot-admin/css/common.css
+++ b/static/chatbot-admin/css/common.css
@@ -220,7 +220,7 @@ img {
 
 .navbar__menu-item-text {
   color: #fff;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 500;
   letter-spacing: 0.05em;
   user-select: none;
@@ -590,4 +590,15 @@ img {
   &:hover {
     background-color: #0056b3;
   }
+}
+
+.pencil-docs,
+.pencil-agency {
+  cursor: pointer;
+}
+
+.select-div {
+  width: 100%;
+  height: 30px;
+  background-color: #1b3133;
 }
