--- a/templates/chatbot-admin/menu01.html
+++ b/templates/chatbot-admin/menu01.html
@@ -313,9 +313,11 @@
             </button>
           </div>
           <!-- 모달 창 -->
-          <div class="modal">
-            <div class="modal-text">모든 카테고리를 선택해 주세요.</div>
-            <button id="modalConfirmButton">확인</button>
+          <div class="modal-background">
+            <div class="modal">
+              <div class="modal-text">모든 카테고리를 선택해 주세요.</div>
+              <button id="modalConfirmButton">확인</button>
+            </div>
           </div>
         </section>
       </div>
