--- a/templates/chatbot-admin/menu04.html
+++ b/templates/chatbot-admin/menu04.html
@@ -498,6 +498,22 @@
             </div>
           </div>
         </div>
+        <!-- 모달 창 -->
+        <div class="modal-background delete">
+          <div class="modal first">
+            <div class="modal-text">
+              정말 J대행 업체의 정보를 삭제하시겠습니까?
+            </div>
+            <div class="buttonDiv">
+              <button id="modalCancelButton">취소</button>
+              <button id="modalSaveButton">확인</button>
+            </div>
+          </div>
+          <div class="modal second">
+            <div class="modal-text">J대행의 정보 삭제가 완료되었습니다.</div>
+            <button id="modalConfirmButton">확인</button>
+          </div>
+        </div>
       </section>
     </div>
 
