--- a/templates/chatbot-admin/menu02.html
+++ b/templates/chatbot-admin/menu02.html
@@ -255,41 +255,19 @@
               <div class="content-modify__charge-wrapper">
                 <span class="content-modify__charge-text">• 서류작성 : </span>
                 <span class="content-modify__charge-text money">10,000원</span>
-                <svg
-                  class="content-modify__charge-edit-icon"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    d="M17.204 10.796L19 9C19.5453 8.45475 19.8179 8.18213 19.9636 7.88803C20.2409 7.32848 20.2409 6.67152 19.9636 6.11197C19.8179 5.81788 19.5453 5.54525 19 5C18.4548 4.45475 18.1821 4.18213 17.888 4.03639C17.3285 3.75911 16.6715 3.75911 16.112 4.03639C15.8179 4.18213 15.5453 4.45475 15 5L13.1814 6.81866C14.1452 8.46926 15.5314 9.84482 17.204 10.796ZM11.7269 8.27311L4.8564 15.1436C4.43134 15.5687 4.21881 15.7812 4.07907 16.0423C3.93934 16.3034 3.88039 16.5981 3.7625 17.1876L3.1471 20.2646C3.08058 20.5972 3.04732 20.7635 3.14193 20.8581C3.23654 20.9527 3.40284 20.9194 3.73545 20.8529L6.81243 20.2375C7.40189 20.1196 7.69661 20.0607 7.95771 19.9209C8.21881 19.7812 8.43134 19.5687 8.8564 19.1436L15.7458 12.2542C14.1241 11.2386 12.7524 9.87627 11.7269 8.27311Z"
-                    fill="#1b3133"
-                  />
-                </svg>
+                <img
+                  src="../../static/chatbot-admin/images/black-pencil.svg"
+                  class="pencil-docs"
+                />
               </div>
               <!-- 업무대행 비용 -->
               <div class="content-modify__charge-wrapper">
                 <span class="content-modify__charge-text">• 업무대행 : </span>
                 <span class="content-modify__charge-text money">20,000원</span>
-                <svg
-                  class="content-modify__charge-edit-icon"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    d="M17.204 10.796L19 9C19.5453 8.45475 19.8179 8.18213 19.9636 7.88803C20.2409 7.32848 20.2409 6.67152 19.9636 6.11197C19.8179 5.81788 19.5453 5.54525 19 5C18.4548 4.45475 18.1821 4.18213 17.888 4.03639C17.3285 3.75911 16.6715 3.75911 16.112 4.03639C15.8179 4.18213 15.5453 4.45475 15 5L13.1814 6.81866C14.1452 8.46926 15.5314 9.84482 17.204 10.796ZM11.7269 8.27311L4.8564 15.1436C4.43134 15.5687 4.21881 15.7812 4.07907 16.0423C3.93934 16.3034 3.88039 16.5981 3.7625 17.1876L3.1471 20.2646C3.08058 20.5972 3.04732 20.7635 3.14193 20.8581C3.23654 20.9527 3.40284 20.9194 3.73545 20.8529L6.81243 20.2375C7.40189 20.1196 7.69661 20.0607 7.95771 19.9209C8.21881 19.7812 8.43134 19.5687 8.8564 19.1436L15.7458 12.2542C14.1241 11.2386 12.7524 9.87627 11.7269 8.27311Z"
-                    fill="#1b3133"
-                  />
-                </svg>
+                <img
+                  src="../../static/chatbot-admin/images/black-pencil.svg"
+                  class="pencil-agency"
+                />
               </div>
             </div>
             <!-- 서류 리스트 -->
@@ -338,12 +316,17 @@
                       <td
                         class="usage-history__table-item usage-history__table-item--list"
                       >
-                        사증발급 신청서<button>발급</button>
+                        사증발급 신청서<img
+                          src="../../static/chatbot-admin/images/refresh.svg"
+                        />
                       </td>
                       <td
                         class="usage-history__table-item usage-history__table-item--docs"
                       >
-                        사증발급 신청서.docs<button>발급</button>
+                        사증발급 신청서.docs
+                        <img
+                          src="../../static/chatbot-admin/images/Check_fill.svg"
+                        />
                       </td>
                       <td
                         class="usage-history__table-item usage-history__table-item--status"
@@ -353,7 +336,9 @@
                       <td
                         class="usage-history__table-item usage-history__table-item--delete"
                       >
-                        <button>삭제</button>
+                        <img
+                          src="../../static/chatbot-admin/images/Trash.svg"
+                        />
                       </td>
                     </tr>
                   </tbody>
@@ -367,12 +352,17 @@
                       <td
                         class="usage-history__table-item usage-history__table-item--list"
                       >
-                        사증발급 신청서<button>발급</button>
+                        사증발급 신청서<img
+                          src="../../static/chatbot-admin/images/refresh.svg"
+                        />
                       </td>
                       <td
                         class="usage-history__table-item usage-history__table-item--docs"
                       >
-                        사증발급 신청서.docs<button>발급</button>
+                        사증발급 신청서.docs
+                        <img
+                          src="../../static/chatbot-admin/images/Check_fill.svg"
+                        />
                       </td>
                       <td
                         class="usage-history__table-item usage-history__table-item--status"
@@ -382,7 +372,9 @@
                       <td
                         class="usage-history__table-item usage-history__table-item--delete"
                       >
-                        <button>삭제</button>
+                        <img
+                          src="../../static/chatbot-admin/images/Trash.svg"
+                        />
                       </td>
                     </tr>
                   </tbody>
@@ -396,12 +388,17 @@
                       <td
                         class="usage-history__table-item usage-history__table-item--list"
                       >
-                        사증발급 신청서<button>발급</button>
+                        사증발급 신청서<img
+                          src="../../static/chatbot-admin/images/refresh.svg"
+                        />
                       </td>
                       <td
                         class="usage-history__table-item usage-history__table-item--docs"
                       >
-                        사증발급 신청서.docs<button>발급</button>
+                        사증발급 신청서.docs
+                        <img
+                          src="../../static/chatbot-admin/images/Check_fill.svg"
+                        />
                       </td>
                       <td
                         class="usage-history__table-item usage-history__table-item--status"
@@ -411,7 +408,9 @@
                       <td
                         class="usage-history__table-item usage-history__table-item--delete"
                       >
-                        <button>삭제</button>
+                        <img
+                          src="../../static/chatbot-admin/images/Trash.svg"
+                        />
                       </td>
                     </tr>
                   </tbody>
@@ -466,7 +465,9 @@
                       <td
                         class="usage-history__table-item usage-history__table-item--delete attach"
                       >
-                        <button>삭제</button>
+                        <img
+                          src="../../static/chatbot-admin/images/Trash.svg"
+                        />
                       </td>
                     </tr>
                   </tbody>
